--- a/acceuil.html
+++ b/acceuil.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Playfair+Display+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arsenal" rel="stylesheet">
 
 
     <title>Bilel Hamimed | Développeur Web Junior</title>
@@ -20,7 +21,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
-        <a class="navbar-brand" href="#">BH</a>
+        <a class="navbar-brand" href="#"><img src="img/logo_bh.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
             aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,14 +30,17 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Acceuil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Projet</a>
+                    <a class="nav-link" href="#">Parcours</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Contact</a>
+                    <a class="nav-link" href="#">Création</a>
                 </li>
+                <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
                 <li class="nav-item dropdown">
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
                         <a class="dropdown-item" href="#">Action</a>
@@ -52,7 +56,7 @@
         <div class="presentation">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>PRESENTATION.</h1></br>
+                    <h1>PRÉSENTATION.</h1></br>
                     <p>Après plusieurs années à travailler dans différents domaines,</br> j'ai décidé de me
                         reconvertir dans
                         le
@@ -101,7 +105,7 @@
         <div class="creation">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>CREATION.</h1>
+                    <h1>CRÉATION.</h1>
                 </div>
                 <div class="col-md-3">
                     <p>Eminuit autem inter humilia supergressa iam impotentia fines mediocrium delictorum nefanda
@@ -175,13 +179,22 @@
         </div>
     </div>
     </section>
-    <footer class="footer">
-        <div class="row">
-            <div class="col-md-12">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <p>2018 Bilel Hamimed. Inc All Rights Reserved</p>
+    <footer style="background-color:black">
+        <div class="reseaux">
+            <div class="row">
+                <div class="col-md-12">
+                    <img src="img/social-linkedin-circular-button.png" alt="" class="logo_reseaux">
+
+                    <img src="img/github2.png" alt="" class="logo_reseaux">
+                </div>
+            </div>
+            <div class="logo">
+                <div class="row">
+                    <div class="col-md-12">
+                        <img src="img/logo.png" alt="logo_bh"></br>
+                        <p>2018 Bilel Hamimed. Inc All Rights Reserved</p>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
