--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 </head>
 <body>
   
-</body>
-</html>
+
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="800px"
 	 height="800px" viewBox="0 0 600 600" enable-background="new 0 0 600 600" xml:space="preserve">
 <g id="cercle">
 	<circle fill="none" stroke="#ffffff" stroke-width="3" stroke-miterlimit="10" cx="239.431" cy="206.438" r="134"/>
 </g>
-<g id="P">
+<a href="acceuil.html"><g id="P"></a>
 	<path fill="none" stroke="#ffffff" stroke-width="3" stroke-miterlimit="10" d="M237.23,261.955c-3.027,0-5.639-0.978-7.836-2.93
 		s-3.297-4.688-3.297-8.203c0-2.978,1.05-5.541,3.15-7.69c2.098-2.148,4.688-3.223,7.764-3.223s5.699,1.063,7.873,3.186
 		c2.172,2.125,3.26,4.7,3.26,7.728c0,3.468-1.088,6.188-3.26,8.167C242.71,260.966,240.159,261.955,237.23,261.955z"/>
@@ -42,3 +41,5 @@
 		c1.928-2.197,4.552-3.296,7.874-3.296c3.271,0,5.92,1.087,7.947,3.259C275.08,156.353,276.094,159.661,276.094,164.104z"/>
 </g>
 </svg>
+</body>
+</html>
