--- a/accueil.html
+++ b/accueil.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <!-- Custom styles for this template -->
-    <link href="style_acceuil.css" rel="stylesheet">
+    <link href="style_accueil.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Acceuil</a>
+                    <a class="nav-link" href="#">Accueil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#parcours">Parcours</a>
@@ -40,9 +40,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#contact">Contact</a>
                 </li>
-        </div>
-                </li>
             </ul>
+        </div>
     </nav>
     <section class="section1">
         <div id="presentation">
@@ -65,7 +64,7 @@
         <div id="parcours">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>PARCOURS.</h1></br>
+                    <h1>PARCOURS.</h1></br></br>
                 </div>
                 <div class="col-md-6">
                     <p>2018 – 2019 | ÉTUDIANT | ACCESS CODE SCHOOL</br>
@@ -97,42 +96,31 @@
         <div id="creation">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>CRÉATION.</h1>
+                    <h1>CRÉATION.</h1></br></br>
                 </div>
                 <div class="col-md-3">
-                    <p>Eminuit autem inter humilia supergressa iam impotentia fines mediocrium delictorum nefanda
-                        Clematii cuiusdam Alexandrini nobilis mors repentina; cuius socrus cum misceri sibi generum,
-                        flagrans eius amore, non impetraret, ut ferebatur, per palatii pseudothyrum introducta, oblato
-                        pretioso reginae monili id adsecuta est, ut ad Honoratum tum comitem orientis formula missa
-                        letali omnino scelere nullo contactus idem Clematius nec hiscere nec loqui permissus
-                        occideretur.</p>
+                    <img src="img/carte_de_voeux.png" alt="" class="capture">
+                    <p class="titre">MERRY CHRISTMAS</p>
+                    <p>HTML/CSS/ANIMATION.</br> Pour cette fin année 2018 réalisation d'une carte de voeux en HTML et CSS.</p>
+
                 </div>
                 <div class="col-md-3">
-                    <p>Eminuit autem inter humilia supergressa iam impotentia fines mediocrium delictorum nefanda
-                        Clematii cuiusdam Alexandrini nobilis mors repentina; cuius socrus cum misceri sibi generum,
-                        flagrans eius amore, non impetraret, ut ferebatur, per palatii pseudothyrum introducta, oblato
-                        pretioso reginae monili id adsecuta est, ut ad Honoratum tum comitem orientis formula missa
-                        letali omnino scelere nullo contactus idem Clematius nec hiscere nec loqui permissus
-                        occideretur.</p>
+                    <img src="img/dora.png" alt="" class="capture">
+                    <P class="titre">CHEZ DORA</P>
+                    <p>HTML/CSS/PHP.</br> Création d'un explorateur de fichier en php.</p>
                 </div>
                 <div class="col-md-3">
-                    <p>Eminuit autem inter humilia supergressa iam impotentia fines mediocrium delictorum nefanda
-                        Clematii cuiusdam Alexandrini nobilis mors repentina; cuius socrus cum misceri sibi generum,
-                        flagrans eius amore, non impetraret, ut ferebatur, per palatii pseudothyrum introducta, oblato
-                        pretioso reginae monili id adsecuta est, ut ad Honoratum tum comitem orientis formula missa
-                        letali omnino scelere nullo contactus idem Clematius nec hiscere nec loqui permissus
-                        occideretur.</p>
+                    <img src="img/space.png" alt="" class="capture">
+                    <P class="titre">SPACE INVADER</P>
+                    <p>HTML/CSS/JavaScript.</br> Jeu Space Invader réaliser au cours de notre formation en développement Web.</p>
                 </div>
                 <div class="col-md-3">
-                    <p>Eminuit autem inter humilia supergressa iam impotentia fines mediocrium delictorum nefanda
-                        Clematii cuiusdam Alexandrini nobilis mors repentina; cuius socrus cum misceri sibi generum,
-                        flagrans eius amore, non impetraret, ut ferebatur, per palatii pseudothyrum introducta, oblato
-                        pretioso reginae monili id adsecuta est, ut ad Honoratum tum comitem orientis formula missa
-                        letali omnino scelere nullo contactus idem Clematius nec hiscere nec loqui permissus
-                        occideretur.</p>
+                    <img src="img/vk.png" alt="" class="capture">
+                    <P class="titre">MOCKUP</P>
+                    <p>HTML/CSS/KNACSS.</br> Intégration d'une maquette.</p>
+
                 </div>
             </div>
-
         </div>
 
     </section class="section4">
@@ -175,9 +163,12 @@
         <div class="reseaux">
             <div class="row">
                 <div class="col-md-12">
-                    <img src="img/social-linkedin-circular-button.png" alt="" class="logo_reseaux">
-
-                    <img src="img/github2.png" alt="" class="logo_reseaux">
+                    <a href="https://www.linkedin.com/in/bilel-hamimed/">
+                        <img src="img/social-linkedin-circular-button.png" alt="" class="logo_reseaux">
+                    </a>
+                    <a href="https://github.com/Krez90">
+                        <img src="img/github2.png" alt="" class="logo_reseaux">
+                    </a>
                 </div>
             </div>
             <div class="logo">
