--- a/accueil.html
+++ b/accueil.html
@@ -128,7 +128,7 @@
         <div class="row">
             <div class="col-md-6">
                 <h3>CONTACT</h3>
-                <form method="post" action="" class="form">
+                <form method="post" action="formulaire.php" class="form">
 
                     <label for='nom'>Nom</label></br>
                     <input type='text' name='nom' id='nom' maxlength='20'>
@@ -139,7 +139,7 @@
                     <span id="missMail"></span><br>
 
                     <label for='message'>Message</label></br>
-                    <input type='textera' name='message' id='message' required>
+                    <textarea name='message' id='message' required class="texte_carre"></textarea>
                     <span id="missmess"></span><br>
 
                     <input type='submit' value='Envoyer' id='bouton_envoi'>
