--- a/accueil.html
+++ b/accueil.html
@@ -53,8 +53,7 @@
                         le
                         développement web.</br> Je suis actuellement en formation de développeur web à l’ACCESS
                         CODE SCHOOL</br>
-                        durant
-                        laquelle j'ai réalisé différents projets, en HTML, CSS, JavaScript et PHP.
+                        j'ai réalisé différents projets, en HTML, CSS, JavaScript et PHP.
                     </p>
                 </div>
             </div>
@@ -64,7 +63,7 @@
         <div id="parcours">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>PARCOURS.</h1></br></br>
+                    <h1 class="parcours">PARCOURS.</h1></br></br>
                 </div>
                 <div class="col-md-6">
                     <p>2018 – 2019 | ÉTUDIANT | ACCESS CODE SCHOOL</br>
@@ -99,25 +98,31 @@
                     <h1>CRÉATION.</h1></br></br>
                 </div>
                 <div class="col-md-3">
-                    <img src="img/carte_de_voeux.png" alt="" class="capture">
+                    <a href="https://bilelh.promo-24.codeur.online/carte_voeux/">
+                        <img src="img/carte_de_voeux.png" alt="" class="capture"></a>
                     <p class="titre">MERRY CHRISTMAS</p>
-                    <p>HTML/CSS/ANIMATION.</br> Pour cette fin année 2018 réalisation d'une carte de voeux en HTML et CSS.</p>
+                    <p>HTML/CSS/ANIMATION.</br> Pour cette fin année 2018 réalisation d'une carte de voeux en HTML et
+                        CSS.</p>
 
                 </div>
                 <div class="col-md-3">
-                    <img src="img/dora.png" alt="" class="capture">
+                    <a href="https://bilelh.promo-24.codeur.online/DoraLexplorateur/">
+                        <img src="img/dora.png" alt="" class="capture"></a>
                     <P class="titre">CHEZ DORA</P>
                     <p>HTML/CSS/PHP.</br> Création d'un explorateur de fichier en php.</p>
                 </div>
                 <div class="col-md-3">
-                    <img src="img/space.png" alt="" class="capture">
+                    <a href="https://bilelh.promo-24.codeur.online/Space-Invaders/">
+                        <img src="img/space.png" alt="" class="capture"></a>
                     <P class="titre">SPACE INVADER</P>
-                    <p>HTML/CSS/JavaScript.</br> Jeu Space Invader réaliser au cours de notre formation en développement Web.</p>
+                    <p>HTML/CSS/JavaScript.</br> Jeu Space Invader réaliser au cours de notre formation en
+                        développement Web.</p>
                 </div>
                 <div class="col-md-3">
-                    <img src="img/vk.png" alt="" class="capture">
-                    <P class="titre">MOCKUP</P>
-                    <p>HTML/CSS/KNACSS.</br> Intégration d'une maquette.</p>
+                    <a href="https://bilelh.promo-24.codeur.online/raleth/index.php">
+                        <img src="img/meme.png" alt="" class="capture"></a>
+                    <P class="titre">GÉNÉRATOR DE MEME</P>
+                    <p>HTML/CSS/PHP.</br> Création d'un génrateur de meme.</p>
 
                 </div>
             </div>
@@ -131,7 +136,7 @@
                 <form method="post" action="formulaire.php" class="form">
 
                     <label for='nom'>Nom</label></br>
-                    <input type='text' name='nom' id='nom' maxlength='20'>
+                    <input type='text' name='nom' id='nom' maxlength='20' required>
                     <span id='missNom'></span><br>
 
                     <label for='mail'>Email</label></br>
@@ -139,7 +144,7 @@
                     <span id="missMail"></span><br>
 
                     <label for='message'>Message</label></br>
-                    <textarea name='message' id='message' required class="texte_carre"></textarea>
+                    <textarea name='message' id='message' class="texte_carre"></textarea>
                     <span id="missmess"></span><br>
 
                     <input type='submit' value='Envoyer' id='bouton_envoi'>
@@ -169,6 +174,9 @@
                     <a href="https://github.com/Krez90">
                         <img src="img/github2.png" alt="" class="logo_reseaux">
                     </a>
+                    <a href="cv_bilel_hamimed.pdf">
+                        <img src="img/CV.png" alt="" class="logo_reseaux">
+                    </a>
                 </div>
             </div>
             <div class="logo">
@@ -182,60 +190,49 @@
         </div>
     </footer>
     <script>
-        var formValid = document.getElementById('bouton_envoi');
+        // CREATION DES VARIABLE
+        var validation = document.getElementById('bouton_envoi');
         var nom = document.getElementById('nom');
         var missNom = document.getElementById('missNom');
+        var nom_v = /^[a-zA-ZéèîïÉÈÎÏ][a-zéèêàçîï]+([-'\s][a-zA-ZéèîïÉÈÎÏ][a-zéèêàçîï]+)?$/;
 
-        formValid.addEventListener('click', validation);
+        validation.addEventListener('click', n_valid);
 
-        function validation(event) {
-            //Si le champ est vide
+        function n_valid(e) {
+            // SI LE CHAMP EST VIDE
             if (nom.validity.valueMissing) {
-                event.preventDefault();
-                missNom.textContent = 'Nom manquant';
+                e.preventDefault();
+                missNom.textContent = 'Prénom manquant';
                 missNom.style.color = 'red';
+                missNom.style.fontStyle = 'italic';
+            }
+            // SI LE FORMAT EST INCORRECT
+            else if (nom_v.test(nom.value) == false) {
+                e.preventDefault();
+                missNom.textContent = 'Le format est incorrect';
+                missNom.style.color = 'orange';
+            }
+            else {
+                missNom.textContent = '';
             }
         }
 
-        var formValid = document.getElementById('bouton_envoi');
-
-        var nom = document.getElementById('nom');
-        var missNom = document.getElementById('missNom');
-        var nomValid = /^[a-zA-ZéèîïÉÈÎÏ][a-zéèêàçîï]+([-'\s][a-zA-ZéèîïÉÈÎÏ][a-zéèêàçîï]+)?$/;
-
+        var validation = document.getElementById('bouton_envoi');
         var mail = document.getElementById('mail');
         var missMail = document.getElementById('missMail');
-        var MailValid = /^[a-zA-ZéèîïÉÈÎÏ][a-zéèêàçîï]+([-'\s][a-zA-ZéèîïÉÈÎÏ][a-zéèêàçîï]+)?$/;
 
-        formValid.addEventListener('click', validation);
+        validation.addEventListener('click', m_valid);
 
-        function validation(event) {
-            //Si le champ est vide
-            if (nom.validity.valueMissing) {
-                event.preventDefault();
-                missNom.textContent = 'Nom manquant';
-                missNom.style.color = 'red';
-                //Si le format de données est incorrect
-            } else if (nomValid.test(nom.value) == false) {
-                event.preventDefault();
-                missNom.textContent = 'Format incorrect';
-                missNom.style.color = 'orange';
-            } else {
-            }
-        }
-        function validation(event) {
-            //Si le champ est vide
+        function m_valid(e) {
             if (mail.validity.valueMissing) {
-                event.preventDefault();
-                missMail.textContent = 'Mail manquant';
+                e.preventDefault();
+                missMail.textContent = 'Email manquant';
                 missMail.style.color = 'red';
-                //Si le format de données est incorrect
-            } else if (mailValid.test(mail.value) == false) {
-                event.preventDefault();
-                missMail.textContent = 'Format incorrect';
-                missMail.style.color = 'orange';
+                missMail.style.fontStyle = 'italic';
             } else {
+                missMail.textContent = '';
             }
+
         }
 
     </script>
